--- a/vignettes/model-fairness.Rmd
+++ b/vignettes/model-fairness.Rmd
@@ -74,11 +74,10 @@ behavior towards specific ethnic groups. If substantial disparities exist, we
 may need to investigate further and potentially modify the algorithm to ensure
 fairness in its predictions.
 
-
 ```{r fig.align="center", fig.height=5, fig.width=7}
-data("compas")
-x <- model_fairness(compas, "Ethnicity", "TwoYrRecidivism", "Predicted", reference = "Caucasian", positive = "yes")
-summary(x)
+x <- model_fairness(compas, "Ethnicity", "TwoYrRecidivism", "Predicted",
+  reference = "Caucasian", positive = "yes"
+)
 plot(x)
 ```
 
@@ -98,6 +97,14 @@ group.
     five times less Hispanics predicted as reoffenders than that there are
     Caucasians.
 
+```{r fig.align="center", fig.height=5, fig.width=7}
+data("compas")
+x <- model_fairness(compas, "Ethnicity", "TwoYrRecidivism", "Predicted",
+  reference = "Caucasian", positive = "yes", metric = "dp"
+)
+summary(x)
+```
+
 2. **Proportional parity (Disparate impact)**: Compares the positive prediction
 rates (e.g., true positive rate) of each ethnic group with the reference group.
   - *African American*: The ratio of true positive rates (TPRs) for African
@@ -111,6 +118,13 @@ rates (e.g., true positive rate) of each ethnic group with the reference group.
   - *Hispanic*: The ratio for Hispanics is 0.91609, suggesting that their TPR is
     close to the reference group (Caucasians). This indicates relatively fair
     treatment of Hispanics in the algorithm's predictions.
+
+```{r fig.align="center", fig.height=5, fig.width=7}
+x <- model_fairness(compas, "Ethnicity", "TwoYrRecidivism", "Predicted",
+  reference = "Caucasian", positive = "yes", metric = "pp"
+)
+summary(x)
+```
 
 3. **Predictive rate parity (Equalized odds)**: Compares the overall positive
 prediction rates (e.g., reoffender prediction) of different ethnic groups with
@@ -128,6 +142,12 @@ the reference group.
     the reference group (Caucasians). This indicates relatively fair treatment
     in the algorithm's overall positive predictions.
 
+```{r fig.align="center", fig.height=5, fig.width=7}
+model_fairness(compas, "Ethnicity", "TwoYrRecidivism", "Predicted",
+  reference = "Caucasian", positive = "yes", metric = "prp"
+)
+```
+
 4. **Accuracy parity**: Compares the accuracy of each ethnic group's predictions
 with the reference group.
   - African American: The accuracy parity ratio for African Americans is 1.021,
@@ -139,6 +159,12 @@ with the reference group.
   - *Hispanic*: The ratio for Hispanics is 1.0351, suggesting their accuracy
     is slightly higher than for Caucasians, indicating potential favoritism in
     overall accuracy.
+
+```{r fig.align="center", fig.height=5, fig.width=7}
+model_fairness(compas, "Ethnicity", "TwoYrRecidivism", "Predicted",
+  reference = "Caucasian", positive = "yes", metric = "ap"
+)
+```
 
 5. **False negative rate parity (Treatment equality)**: Compares the false
 negative rates (e.g., for reoffenders) of each ethnic group with the reference
@@ -155,6 +181,12 @@ group.
     relatively similar rates as the reference group (Caucasians), suggesting
     fair treatment in this aspect.
 
+```{r fig.align="center", fig.height=5, fig.width=7}
+model_fairness(compas, "Ethnicity", "TwoYrRecidivism", "Predicted",
+  reference = "Caucasian", positive = "yes", metric = "fnrp"
+)
+```
+
 6. **False positive rate parity**: Compares the false positive rates (e.g., for
 non-reoffenders) of each ethnic group with the reference group.
   - *African American*: The false positive rate parity ratio for African
@@ -169,6 +201,12 @@ non-reoffenders) of each ethnic group with the reference group.
     suggesting they are less likely to be falsely predicted as reoffenders
     compared to Caucasians. This indicates potential fair treatment of Hispanics
     in false positive predictions.
+
+```{r fig.align="center", fig.height=5, fig.width=7}
+model_fairness(compas, "Ethnicity", "TwoYrRecidivism", "Predicted",
+  reference = "Caucasian", positive = "yes", metric = "fprp"
+)
+```
 
 7. **True positive rate parity (Equal opportunity)**: Compares the true positive
 rates (e.g., for reoffenders) of each ethnic group with the reference group.
@@ -186,6 +224,12 @@ rates (e.g., for reoffenders) of each ethnic group with the reference group.
     group (Caucasians). This indicates relatively fair treatment in the
     algorithm's true positive predictions.
 
+```{r fig.align="center", fig.height=5, fig.width=7}
+model_fairness(compas, "Ethnicity", "TwoYrRecidivism", "Predicted",
+  reference = "Caucasian", positive = "yes", metric = "tprp"
+)
+```
+
 8. **Negative predicted value parity**: Compares the negative predicted values
 (e.g., for non-reoffenders) of each ethnic group with the reference group.
   - *African American*: The Negative predicted value (NPV) parity ratio for
@@ -200,6 +244,12 @@ rates (e.g., for reoffenders) of each ethnic group with the reference group.
     their NPV is slightly higher than for Caucasians. This indicates potential
     favoritism towards Hispanics in predicting non-reoffenders.
 
+```{r fig.align="center", fig.height=5, fig.width=7}
+model_fairness(compas, "Ethnicity", "TwoYrRecidivism", "Predicted",
+  reference = "Caucasian", positive = "yes", metric = "npvp"
+)
+```
+
 9. **Specificity parity (True negative rate parity)**: Compares the specificity
 (true negative rate) of each ethnic group with the reference group.
   - *African American*: The specificity parity ratio for African Americans is
@@ -213,6 +263,12 @@ rates (e.g., for reoffenders) of each ethnic group with the reference group.
     that their specificity is very close to the reference group (Caucasians).
     This indicates relatively fair treatment in correctly identifying
     non-reoffenders among Hispanics.
+
+```{r fig.align="center", fig.height=5, fig.width=7}
+model_fairness(compas, "Ethnicity", "TwoYrRecidivism", "Predicted",
+  reference = "Caucasian", positive = "yes", metric = "sp"
+)
+```
 
 ## References
 
