--- a/vignettes/algorithm-auditing.Rmd
+++ b/vignettes/algorithm-auditing.Rmd
@@ -57,8 +57,13 @@ model_fairness(
   predictions,
   reference = NULL,
   positive = NULL,
-  materiality = 0.8,
-  conf.level = 0.95
+  metric = c(
+    "prp", "pp", "ap", "fnrp", "fprp",
+    "tprp", "npvp", "sp", "dp"
+  ),
+  alternative = c("two.sided", "greater", "less"),
+  conf.level = 0.95,
+  prior = FALSE
 )
 ```
 
@@ -71,7 +76,8 @@ model_fairness(
   target = "TwoYrRecidivism",
   predictions = "Predicted",
   reference = "Caucasian",
-  positive = "yes"
+  positive = "yes",
+  metric = "prp"
 )
 ```
 
